Bug 991175 - Headers values in the netmonitor sidepane are very hard to read and copy after clicking on them, r=msucan
UltraBlame original commit: 312c314e230bed802d66eca2b9edbd5e2ac61411

--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -3791,29 +3791,6 @@ property
 title
 >
 .
-value
-{
--
-moz
--
-box
--
-flex
-:
-1
-;
-}
-.
-variable
--
-or
--
-property
->
-.
-title
->
-.
 arrow
 {
 -
